--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+name = "PStdLib"
+uuid = "81de72d6-94f4-11e9-3d35-4feaf5d5fb7f"
+authors = ["Louis Ponet <louisponet@gmail.com>"]
+repo = "https://github.com/louisponet/StdLib.jl.git"
+version = "0.0.0"
 [deps]
 InlineExports = "809d7502-0c9d-5bc2-962a-5201dc498f73"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
