--- a/Project.toml
+++ b/Project.toml
@@ -8,3 +8,4 @@ version = "0.0.0"
 InlineExports = "809d7502-0c9d-5bc2-962a-5201dc498f73"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
