--- a/.travis.yml
+++ b/.travis.yml
@@ -41,3 +41,18 @@ after_success:
 
   - julia -e 'Pkg.add("Documenter")'
   - julia -e 'using PStdLib; cd(dirname(dirname(pathof(PStdLib)))); include(joinpath("docs", "make.jl"))'
+
+jobs:
+  include:
+    - name: "Benchmark"
+      julia: 1.1
+      os: linux
+      before_script:
+        - git fetch origin '+refs/heads/master:refs/remotes/origin/master'
+        - git branch master origin/master
+        # Run benchmark outside `script` so that it's hidden by default:
+        - julia -e 'using Run; Run.script("benchmark/runjudge.jl")'
+      script:
+        - julia -e 'using Run; Run.script("benchmark/pprintjudge.jl")'
+      after_success: skip
+      if: NOT (branch = master)
